# day-trader

./: .env.example  .gitignore  main.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: ask_cfa_specs.py  backfill_alpaca_pnl.py  com.daytrader.arena-start.plist  com.daytrader.backend.plist  hourly_cfa_check.py  install-services.sh  mock_server.py  run_arena.sh  start-arena.sh  uninstall-services.sh
src/core/: arena.py  cfa_review.py  config.py  database.py  execution.py  fitness.py  llm_rules.py  mutation_memory.py  performance.py  position_manager.py  regime.py  strategy.py  watch_rules.py
src/dashboard/api/: server.py
src/dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/dashboard/frontend/src/: App.tsx  EquityChart.tsx  hooks.ts  index.css
src/data/: corporate_actions.py  feed.py  news_feed.py  options.py  screener.py  sectors.py  sentiment.py
src/evolution/: engine.py
src/strategies/: atr_breakout.py  atr_breakout_simple.py  bollinger_bands.py  breakout.py  cfa_generated.py  collab.py  ma_crossover.py  macd_strategy.py  mean_reversion.py  ml_predictor.py  momentum.py  momentum_breakout.py  news_sentiment.py  registry.py  rsi_reversion.py  stochastic.py  volatility_compression.py  volume_profile_reversion.py  vwap_reversion.py
tests/: test_batch_refresh.py  test_smoke.py  test_watch.py
